<resources>
    <string name="Title_email">Title FeedBack</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_mode">Add Mode</string>
    <string name="add_to_white_list">Add to whitelist</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner">/6499/example/banner</string>
    <string name="admob_full">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native">/6499/example/native</string>
    <string name="advance">Advance</string>
    <string name="app_manager">App Manager</string>
    <string name="app_name">Mister Phone Cleaner</string>
    <string name="app_nametitle">Mister Phone Cleaner</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto">Auto</string>
    <string name="auto_boost">Auto Boost</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="battery_percent">Battery Percent</string>
    <string name="battery_percent_description">Show battery percent in notification bar</string>
    <string name="battery_plan">Battery Saving Plan</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="boost">Boost</string>
    <string name="boost_done">Some apps may reopen automatically after they have been forced to stop running.</string>
    <string name="boost_widget">Boost Widget</string>
    <string name="boost_widget_description">Home screen widget to boost phone</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calculating">Calculating...</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean_up">Clean Up</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="confirm_close">Are you sure you want to close this activity?</string>
    <string name="confirm_exit">Do you really want to exit?</string>
    <string name="custom">Custom</string>
    <string name="dangerous_app">dangerous app</string>
    <string name="data">Data</string>
    <string name="description_home_wiget">"1. Long press home screen or menu to add widget. 
 2. Choose Speed Booster widget to add to home screen. 
 3. Then tap Speed Booster to speed up yout phone easily"</string>
    <string name="device_has_been_boosted">You device has been boosted</string>
    <string name="done">Done</string>
    <string name="downloader_files">Downloaded Files</string>
    <string name="email_feedback">emailne@gmail.com</string>
    <string name="enabled">Enabled</string>
    <string name="enter_name">Enter Mode Name</string>
    <string name="every_10_mins">Every 10 mins</string>
    <string name="exit_app">Exit</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="floating_booster">Floating Booster</string>
    <string name="floating_booster_description">Show floating boost button on screen</string>
    <string name="free_mem">Free: %s</string>
    <string name="free_ram">Free RAM: %s</string>
    <string name="full_battery_percent">Fully charging reminder</string>
    <string name="full_battery_percent_description">Protect your battery from overcharging</string>
    <string name="good_5_stars">Good, 5 stars</string>
    <string name="got_it">GOT IT</string>
    <string name="guide_activity_usage">Please permit usage access</string>
    <string name="guide_reminder">You need to grant Usage Access permission to enable this feature</string>
    <string name="has_been_boosted">You device has been boosted</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="in_danger">In Danger</string>
    <string name="index_storage" formatted="false">%s / %s</string>
    <string name="install_app_ads">Install Now</string>
    <string name="junk_clean">Junk Clean</string>
    <string name="large_files">Large Files</string>
    <string name="lenght_screen_timout_m">%dm</string>
    <string name="lenght_screen_timout_s">%ds</string>
    <string name="lenght_time_off_screen">s</string>
    <string name="memory">STORAGE</string>
    <string name="message_dialog_feed_back">Request bug fix and implement new features via email</string>
    <string name="minute_1">1 minute</string>
    <string name="minute_10">10 minutes</string>
    <string name="minute_2">2 minutes</string>
    <string name="minute_5">5 minutes</string>
    <string name="minutes">%d minute(s)</string>
    <string name="mode_to_use">Mode to use in this period</string>
    <string name="mode_to_use_outside">Mode to use outside of this period</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_item">No item</string>
    <string name="no_junk">No junk file found</string>
    <string name="normal">Normal</string>
    <string name="not_good">Not good</string>
    <string name="obsolete_apk">Obsolete APKs</string>
    <string name="ok">OK</string>
    <string name="others">Others</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="per_read_sms_des">This application can read your private SMS and is a risk for your privacy.</string>
    <string name="per_read_sms_des2">You can enable automatic updates of anti-virus databases.</string>
    <string name="percent">%d %%</string>
    <string name="percent_none">%</string>
    <string name="phone_boots">Phone Boost</string>
    <string name="please_input_name">Please input name</string>
    <string name="ram">RAM</string>
    <string name="rate">Rate 5 stars</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_description">Give us 5 stars and comment</string>
    <string name="rate_msg">Our team are working very hard to give you the best free application. Your 5-star review is worth more than all money. Please write a nice review in Google Play to encourage me.</string>
    <string name="remind_later">Remind later</string>
    <string name="remove">Remove</string>
    <string name="resolve_all">Resolve all</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save">Save</string>
    <string name="screen_brightness">Screen Brightness</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="search_menu_title">Search</string>
    <string name="seconds">%d seconds</string>
    <string name="seconds_15">15 seconds</string>
    <string name="seconds_30">30 seconds</string>
    <string name="select_mode">Select Mode</string>
    <string name="setting_permission_request_summary">You need turn on permission to use this funtion</string>
    <string name="setting_permission_request_title">Allow write system settings</string>
    <string name="share">Share to friend</string>
    <string name="share_description">Share this app to your friend</string>
    <string name="start_at">Start at</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_at">Stop at</string>
    <string name="str_battery_about_full">Battery about to be fully charged</string>
    <string name="suggested">Suggested</string>
    <string name="super_saving">Super Saving</string>
    <string name="system_apps">System apps</string>
    <string name="system_cache">System Cache</string>
    <string name="third_party_apps">Third party apps</string>
    <string name="vibrate">Vibrate</string>
    <string name="wifi">Wifi</string>
</resources>