<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <com.mbkristine8.cleanmaster.view.DonutProgress android:id="@id/progressBarBoost" android:layout_width="@dimen/layout_loader" android:layout_height="@dimen/layout_loader" android:indeterminateDrawable="@drawable/progressbar_custom" android:layout_centerInParent="true" custom:donut_finished_color="@color/white" custom:donut_finished_stroke_width="8.0dip" custom:donut_text_color="@android:color/transparent" custom:donut_unfinished_color="#80ffffff" custom:donut_unfinished_stroke_width="8.0dip" />
    <ImageView android:id="@id/imgBoostDone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_done" android:layout_centerInParent="true" android:contentDescription="@string/app_name" />
    <ImageView android:id="@id/imgBooster" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="10.0dip" android:layout_alignLeft="@id/progressBarBoost" android:layout_alignBottom="@id/progressBarBoost" android:contentDescription="@string/app_name" android:layout_marginStart="20.0dip" android:layout_alignStart="@id/progressBarBoost" />
    <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/white" android:gravity="center" android:id="@id/tvBoostDone" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/boost_done" android:layout_below="@id/progressBarBoost" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/white" android:id="@id/btnDone" android:background="@drawable/bg_button_done" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/done" android:layout_below="@id/tvBoostDone" android:layout_centerHorizontal="true" />
</RelativeLayout>