<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/root" android:background="@color/black_alpha_70" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="38.0dip" android:layout_marginRight="38.0dip">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/usage_guide_top_bg" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="44.0dip" android:layout_height="44.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:src="@drawable/logo" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/app_name" android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="55.0dip">
            <TextView android:textSize="16.0sp" android:textColor="#ff444444" android:layout_gravity="center_vertical" android:padding="5.0dip" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/setting_permission_request_title" android:layout_weight="1.0" android:fontFamily="@font/roboto_regular" />
            <FrameLayout android:layout_width="100.0dip" android:layout_height="fill_parent">
                <androidx.appcompat.widget.SwitchCompat android:layout_gravity="center" android:id="@id/na_guide_switch_btn" android:layout_width="50.0dip" android:layout_height="wrap_content" style="@style/swguide" />
                <ImageView android:layout_gravity="center_vertical" android:id="@id/na_guide_hand_img" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:src="@drawable/pointing_hand" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@android:color/white" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="70.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_gray" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_permission_request_summary" android:fontFamily="@font/roboto_light" />
        </LinearLayout>
        <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/na_guide_ok" android:background="@drawable/usage_guide_btn_bg" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="16.0dip" android:text="OK" android:fontFamily="@font/roboto_regular" />
    </LinearLayout>
    <View android:layout_gravity="fill_horizontal" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</LinearLayout>